fix: reduce font weight in OverViewStatus.css for improved readability

--- a/src/features/overview/OverViewStatus.css
+++ b/src/features/overview/OverViewStatus.css
@@ -60,7 +60,7 @@
 }
 
 .o-pie-dec * {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 768px) {
